<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/margin_start"
        android:layout_margin="@dimen/margin_start"
        app:cardPreventCornerOverlap="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout"
            android:background="@drawable/pagaruyung">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_detail"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textStyle="italic"
                android:id="@+id/location"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="@dimen/margin_start"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/place"
                android:layout_above="@+id/location"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@string/place_name"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                style="@style/Base.TextAppearance.AppCompat.Medium.Inverse.TITLE"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/konten_by"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/margin_start"
                android:text="@string/konten_teks"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"/>

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:src="@drawable/ic_creativity_white"
                android:contentDescription=""
                tools:ignore="ContentDescription"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/konten_by" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>